--- a/configs/infer/deeplabv2_r101_infer.yaml
+++ b/configs/infer/deeplabv2_r101_infer.yaml
@@ -1,18 +1,18 @@
 MODEL:
   NAME: "deeplab_resnet101"
   WEIGHTS: "https://download.pytorch.org/models/resnet101-5d3b4d8f.pth"
-  MULTI_TEST_WEIGHTS: ['./checkpoints/step2/adv_pascal_sbd12_filtered_realism_lr2.5e4_source_prestyled/model_iter040000.pth']#,
-                       #'./checkpoints/step2/adv_pascal_sbd12_filtered_impressionism_lr2.5e4_source_prestyled/model_iter040000.pth',
-                       #'./checkpoints/step2/adv_pascal_sbd12_filtered_post_impressionism_lr2.5e4_source_prestyled/model_iter040000.pth',
-                       #'./checkpoints/step2/adv_pascal_sbd12_filtered_expressionism_lr2.5e4_source_prestyled/model_iter040000.pth']
+  MULTI_TEST_WEIGHTS: ['./checkpoints/step2/adv_pascal_sbd12_filtered_realism_lr2.5e4_source_prestyled/model_iter040000.pth',
+                       './checkpoints/step2/adv_pascal_sbd12_filtered_impressionism_lr2.5e4_source_prestyled/model_iter040000.pth',
+                       './checkpoints/step2/adv_pascal_sbd12_filtered_post_impressionism_lr2.5e4_source_prestyled/model_iter040000.pth',
+                       './checkpoints/step2/adv_pascal_sbd12_filtered_expressionism_lr2.5e4_source_prestyled/model_iter040000.pth']
 
   PCA: './gram_embedding/pca_f'
 
 DATASETS:
-  MULTI_TEST_WEIGHTS_DATASETS: ["dram_realism_train"]#,
-                                #"dram_impressionism_train",
-                                #"dram_post_impressionism_train",
-                                #"dram_expressionism_train"]
+  MULTI_TEST_WEIGHTS_DATASETS: ["dram_realism_train",
+                                "dram_impressionism_train",
+                                "dram_post_impressionism_train",
+                                "dram_expressionism_train"]
 
   TRAIN_GRAM_EMBEDDINGS: './gram_embedding/trainset_embeddings512'
 
